Name:                Adaptive
Version:             0.23
Synopsis:            Library for incremental computing.
Description:         This is a Haskell (plus some extensions) implementation 
		     of a library for incremental computing.  It closely 
		     follows the implementation in the nice POPL 2002 paper 
		     "Adaptive Functional Programming", by Umut Acar, 
		     Guy Blelloch and Bob Harper.
License:             BSD3
License-file:        LICENSE
Author:              Magnus Carlsson
Maintainer:          Magnus Carlsson <magnus@galois.com>
data-files:	     ChangeLog, README
build-type:	     Simple
Cabal-version:       >= 1.6
Category:            Control

Library
  Build-Depends:       base
  Exposed-modules:     Control.Monad.Adaptive, Control.Monad.Adaptive.Ref,Control.Monad.Adaptive.PriorityQueue, Control.Monad.Adaptive.OrderedList, Control.Monad.Adaptive.CircularList, Control.Monad.Adaptive.MonadUtil

--category:            
Executable spreadsheet
  Main-is:             spreadsheet.hs

source-repository head
  type: git
  location: git://github.com/Blaisorblade/Haskell-Adaptive.git
